sidebar + info cleaned

--- a/profiles/profile_view.html
+++ b/profiles/profile_view.html
@@ -1,38 +1,27 @@
 <div id="arsenal-view" class="profile-wrapper-horde" style="background-color: #4E4E4E;">
 	<div class="profile-sidebar-anchor">
-		<div class="profile-sidebar-outer">
-			<div class="profile-sidebar-inner">
-				<div class="profile-sidebar-contents">
-					<div class="profile-info-anchor">
-						<div class="profile-info">
-							<div class="name">Neevi</div>
-							<div class="title-guild">
-								<div class="title" onclick="window.location='{TANZEN}{SID}&amp;view=simple'"> die Wahnsinnige</div>
-								<div class="guild"><a href="/wow/de/game/race/blood-elf">Total Annihilation</a></div>
-							</div>
-							<span class="clear-divider"><!-- --></span>
-							<div class="under-name color-c3"> <span class="level"><strong>100</strong></span>, <a href="/wow/de/game/race/blood-elf" class="race">Blutelfe</a>, <a id="profile-info-spec" href="#talents" class="spec tip">Tierherrschaft</a>, <a href="/wow/de/game/class/hunter" class="class">Jägerin</a>, <span class="realm tip" id="profile-info-realm">Teldrassil</span> </div>
-							<div class="achievements"><a href="/wow/de/character/teldrassil/Neevi/achievement">21780</a></div>
-						</div>
-					</div>
-					<ul class="profile-sidebar-menu">
-						<li class=" active"> <a href="/wow/de/character/teldrassil/Neevi/" class="" rel="np"> <span class="arrow">Übersicht</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/hunter-pet" class="" rel="np"> <span class="arrow">Begleiter</span> </a> </li>
-						<li class=" disabled"> <a href="javascript:;" class=" has-submenu"> <span class="arrow">Auktionen <i class="fa fa-lock"></i></span> </a> </li>
-						<li class=" disabled"> <a href="javascript:;" class=""> <span class="arrow">Ereignisse <i class="fa fa-lock"></i></span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/achievement" class=" has-submenu"> <span class="arrow">Erfolge</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/challenge" class=""> <span class="arrow">Herausforderungsmodus</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/pet" class=""> <span class="arrow">Haus- und Reittiere</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/profession/" class=" has-submenu"> <span class="arrow">Berufe</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/reputation/" class=""> <span class="arrow">Ruf</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/pvp" class=""> <span class="arrow">PvP</span> </a> </li>
-						<li class=""> <a href="/wow/de/character/teldrassil/Neevi/feed" class=""> <span class="arrow">Aktivitäten-Feed</span> </a> </li>
-						<li class=""> <a href="/wow/de/guild/teldrassil/Total_Annihilation/?character=neevi" class=" has-submenu"> <span class="arrow">Gilde</span> </a> </li>
-					</ul>
-					<div class="summary-sidebar-links"> <span class="summary-sidebar-button"> <a href="javascript:;" id="summary-link-tools" class="summary-link-tools"></a> </span> <span class="summary-sidebar-button"> <a href="javascript:;" data-fansite="character|EU|Neevi|teldrassil" class="fansite-link "> </a> </span> </div>
+		<div class="profile-info-anchor">
+			<div class="profile-info">
+				<div class="name">Neevi</div>
+				<div class="title-guild">
+					<div class="title"> die Wahnsinnige</div>
+					<div class="guild"><a href="{EQDKP_CONTROLLER_PATH}Roster{SEO_EXTENSION}{SID}">Total Annihilation</a></div>
 				</div>
+				<span class="clear-divider"><!-- --></span>
+				<div class="under-name class_3"> <span class="level">100</span>, Blutelfe, Tierherrschaft, Jägerin, <span class="realm">Teldrassil</span> </div>
+				<div class="achievements"><a href="{EQDKP_CONTROLLER_PATH}Character/Neevi{SEO_EXTENSION}{SID}&achievements">21780</a></div>
 			</div>
 		</div>
+		<ul class="profile-sidebar-menu">
+			<li class="active"> <a href="{EQDKP_CONTROLLER_PATH}Character/Neevi{SEO_EXTENSION}{SID}">Übersicht</a> </li>
+			<li class=""> <a href="/wow/de/character/teldrassil/Neevi/hunter-pet">Begleiter</a> </li>
+			<li class="disabled"> <a href=" ">Ereignisse <i class="fa fa-lock"></i></a> </li>
+			<li class=""> <a href="/wow/de/character/teldrassil/Neevi/achievement">Erfolge</a> </li>
+			<li class=""> <a href="/wow/de/character/teldrassil/Neevi/pet">Reit- und Haustiere</a> </li>
+			<li class=""> <a href="/wow/de/character/teldrassil/Neevi/profession/">Berufe</a> </li>
+			<li class=""> <a href="/wow/de/character/teldrassil/Neevi/reputation/">Ruf</a> </li>
+			<li class=""> <a href="/wow/de/character/teldrassil/Neevi/pvp">PvP</a> </li>
+		</ul>
 	</div>
 	<!-- close sidebar -->
 	
