show already some things of Data array

--- a/profiles/profile_view.html
+++ b/profiles/profile_view.html
@@ -1,14 +1,14 @@
-<div id="arsenal-view" class="profile-wrapper-{ARS_CHAR_FACTION}" style="background-color: #4E4E4E;">
+<div id="arsenal-view" class="profile-wrapper-{CHAR_FACTION}" style="background-color: #4E4E4E;">
 	<div class="profile-sidebar-anchor">
 		<div class="profile-info-anchor">
 			<div class="profile-info">
 				<div class="name">{CHARDATA_NAME}</div>
 				<div class="title-guild">
-					<div class="title">{ARS_CHAR_TITLE_NAME}</div>
-					<div class="guild"><a href="{EQDKP_ROSTER_URL}">{ARS_CHAR_GUILD}</a></div>
+					<div class="title">{CHAR_TITLE_NAME}</div>
+					<div class="guild"><a href="{EQDKP_ROSTER_URL}">{CHAR_GUILD}</a></div>
 				</div>
 				<span class="clear-divider"></span>
-				<div class="under-name class_{ARS_CHAR_CLASS}"> <span class="level">{ARS_CHAR_LEVEL}</span>, {ARS_CHAR_RACE_NAME}, {ARS_CHAR_CURRENT_SPEC_NAME}, {ARS_CHAR_CLASS_NAME}, <span class="realm">{ARS_CHAR_REALM}</span> </div>
+				<div class="under-name class_{CHAR_CLASS}"> <span class="level">{CHAR_LEVEL}</span>, {CHAR_RACE_NAME}, {CHAR_CURRENT_SPEC_NAME}, {CHAR_CLASS_NAME}, <span class="realm">{CHAR_REALM}</span> </div>
 				<div class="achievements"><a href="{MEMBERLINK}&page=achievements">###21780</a></div>
 			</div>
 		</div>
